[project]
name = "e-commerce-agentic-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai-agents>=0.0.17",
    "pymongo>=4.13.1",
    "rapidfuzz>=3.13.0",
    "stripe>=12.2.0",
]
